--- a/src/Olbrasoft.Commanding.Castle/Olbrasoft.Commanding.Castle.csproj
+++ b/src/Olbrasoft.Commanding.Castle/Olbrasoft.Commanding.Castle.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Olbrasoft.Commanding\Olbrasoft.Commanding.csproj" />
+    <ProjectReference Include="..\Olbrasoft.Extensions\Olbrasoft.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
