--- a/src/Olbrasoft.Querying.Castle/Olbrasoft.Querying.Castle.csproj
+++ b/src/Olbrasoft.Querying.Castle/Olbrasoft.Querying.Castle.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Olbrasoft.Extensions\Olbrasoft.Extensions.csproj" />
     <ProjectReference Include="..\Olbrasoft.Querying\Olbrasoft.Querying.csproj" />
   </ItemGroup>
 
