--- a/test/Olbrasoft.Commanding.DependencyInjection.Microsoft.Tests/Olbrasoft.Commanding.DependencyInjection.Microsoft.Tests.csproj
+++ b/test/Olbrasoft.Commanding.DependencyInjection.Microsoft.Tests/Olbrasoft.Commanding.DependencyInjection.Microsoft.Tests.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
