--- a/src/Olbrasoft.Querying.Mapping/Olbrasoft.Querying.Mapping.csproj
+++ b/src/Olbrasoft.Querying.Mapping/Olbrasoft.Querying.Mapping.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Altairis.AskMe.Web.RazorPages\Olbrasoft.Mapping\Olbrasoft.Mapping.csproj" />
+    <ProjectReference Include="..\Olbrasoft.Mapping\Olbrasoft.Mapping.csproj" />
     <ProjectReference Include="..\Olbrasoft.Querying\Olbrasoft.Querying.csproj" />
   </ItemGroup>
 
