--- a/test/Olbrasoft.AskMe.Data.Unit.Tests/Olbrasoft.AskMe.Data.Unit.Tests.csproj
+++ b/test/Olbrasoft.AskMe.Data.Unit.Tests/Olbrasoft.AskMe.Data.Unit.Tests.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Mapping\Profiles\CategoryToCategoryListItemDtoProfileTest.cs" />
+    <Compile Remove="Mapping\Profiles\QuestionToAnsweredQuestionDtoProfileTest.cs" />
+    <Compile Remove="Mapping\Profiles\QuestionToSyndicationQuestionDtoProfileTest.cs" />
+    <Compile Remove="Mapping\Profiles\QuestionToUnansweredQuestionDtoProfileTest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
@@ -24,6 +31,10 @@
     <Reference Include="Microsoft.Extensions.Identity.Stores">
       <HintPath>..\..\..\..\..\..\.nuget\packages\microsoft.extensions.identity.stores\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Stores.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mapping\Profiles\" />
   </ItemGroup>
 
 </Project>
