--- a/src/Olbrasoft.AskMe.Data.EntityFrameworkCore/Olbrasoft.AskMe.Data.EntityFrameworkCore.csproj
+++ b/src/Olbrasoft.AskMe.Data.EntityFrameworkCore/Olbrasoft.AskMe.Data.EntityFrameworkCore.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Altairis.AskMe.Data\Altairis.AskMe.Data.csproj" />
     <ProjectReference Include="..\Olbrasoft.Commanding.EntityFrameworkCore\Olbrasoft.Commanding.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\Olbrasoft.Commanding.Mapping.EntityFrameworkCore\Olbrasoft.Commanding.Mapping.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Olbrasoft.Querying.EntityFrameworkCore\Olbrasoft.Querying.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Olbrasoft.Querying.Mapping.EntityFrameworkCore\Olbrasoft.Querying.Mapping.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Olbrasoft.Querying\Olbrasoft.Querying.csproj" />
