--- a/src/Altairis.AskMe.Web.RazorPages/Altairis.AskMe.Web.RazorPages.csproj
+++ b/src/Altairis.AskMe.Web.RazorPages/Altairis.AskMe.Web.RazorPages.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Olbrasoft.AskMe.Business.DependencyInjection.Microsoft\Olbrasoft.AskMe.Business.DependencyInjection.Microsoft.csproj" />
     <ProjectReference Include="..\Olbrasoft.AskMe.Data.EntityFrameworkCore\Olbrasoft.AskMe.Data.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Olbrasoft.Commanding.DependencyInjection.Microsoft\Olbrasoft.Commanding.DependencyInjection.Microsoft.csproj" />
+    <ProjectReference Include="..\Olbrasoft.Mapping.AutoMapper.DependencyInjection.Microsoft\Olbrasoft.Mapping.AutoMapper.DependencyInjection.Microsoft.csproj" />
     <ProjectReference Include="..\Olbrasoft.Paging.X.PagedList\Olbrasoft.Paging.X.PagedList.csproj" />
     <ProjectReference Include="..\Olbrasoft.Querying.DependencyInjection.Microsoft\Olbrasoft.Querying.DependencyInjection.Microsoft.csproj" />
   </ItemGroup>
