--- a/src/Olbrasoft.AskMe.Data.EntityFrameworkCore/Olbrasoft.AskMe.Data.EntityFrameworkCore.csproj
+++ b/src/Olbrasoft.AskMe.Data.EntityFrameworkCore/Olbrasoft.AskMe.Data.EntityFrameworkCore.csproj
@@ -6,13 +6,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="NLipsum" Version="1.1.0" />    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.4" />
+    <PackageReference Include="NLipsum" Version="1.1.0" />    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
+  <PrivateAssets>all</PrivateAssets>
+  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+</PackageReference>
     <PackageReference Include="NLipsum" Version="1.1.0" />
   </ItemGroup>
 
