--- a/src/Altairis.AskMe.Web.RazorPages/Altairis.AskMe.Web.RazorPages.csproj
+++ b/src/Altairis.AskMe.Web.RazorPages/Altairis.AskMe.Web.RazorPages.csproj
@@ -11,12 +11,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
+    <PackageReference Include="NHibernate.AspNetCore.Identity" Version="1.5.0" />
+    <PackageReference Include="NHibernate.NetCore" Version="1.1.3" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="7.6.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Olbrasoft.AskMe.Business.DependencyInjection.Microsoft\Olbrasoft.AskMe.Business.DependencyInjection.Microsoft.csproj" />
     <ProjectReference Include="..\Olbrasoft.AskMe.Data.EntityFrameworkCore\Olbrasoft.AskMe.Data.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\Olbrasoft.AskMe.Data.NHibernate\Olbrasoft.AskMe.Data.NHibernate.csproj" />
     <ProjectReference Include="..\Olbrasoft.Commanding.DependencyInjection.Microsoft\Olbrasoft.Commanding.DependencyInjection.Microsoft.csproj" />
     <ProjectReference Include="..\Olbrasoft.Mapping.AutoMapper.DependencyInjection.Microsoft\Olbrasoft.Mapping.AutoMapper.DependencyInjection.Microsoft.csproj" />
     <ProjectReference Include="..\Olbrasoft.Paging.X.PagedList\Olbrasoft.Paging.X.PagedList.csproj" />
