--- a/src/Altairis.AskMe.Web.DotVVM/config.json
+++ b/src/Altairis.AskMe.Web.DotVVM/config.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "AskDb": "Data Source=App_Data/ask.db"
+    "AskDb": "Data Source=App_Data/ask.db",
+    "AskMicrosoftSqlServer": "Server=localhost; Database=AskMe; Trusted_Connection=True; MultipleActiveResultSets=true"
+
   },
   "PageSize": 5
 }
