--- a/test/Olbrasoft.Commanding.Mapping.NHibernate.Tests/Olbrasoft.Commanding.Mapping.NHibernate.Tests.csproj
+++ b/test/Olbrasoft.Commanding.Mapping.NHibernate.Tests/Olbrasoft.Commanding.Mapping.NHibernate.Tests.csproj
@@ -19,12 +19,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Olbrasoft.Commanding.Mapping.NHibernate\Olbrasoft.Commanding.Mapping.NHibernate.csproj" />
     <ProjectReference Include="..\..\src\Olbrasoft.Commanding.Mapping\Olbrasoft.Commanding.Mapping.csproj" />
-    <ProjectReference Include="..\..\src\Olbrasoft.Querying.Mapping\Olbrasoft.Querying.Mapping.csproj" />
+    <ProjectReference Include="..\..\src\Olbrasoft.Commanding\Olbrasoft.Commanding.csproj" />
+    <ProjectReference Include="..\..\src\Olbrasoft.Mapping\Olbrasoft.Mapping.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="DotVVM.Framework">
-      <HintPath>..\..\..\..\..\..\.nuget\packages\dotvvm\2.3.0\lib\netstandard2.0\DotVVM.Framework.dll</HintPath>
+    <Reference Include="xunit.core">
+      <HintPath>..\..\..\..\..\..\.nuget\packages\xunit.extensibility.core\2.4.0\lib\netstandard2.0\xunit.core.dll</HintPath>
     </Reference>
   </ItemGroup>
 
